[project]
name = "fxbilibili"
version = "0.1.0"
description = "Fix bilibili embeds on Discord"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-client-cache[sqlite]>=0.12.4",
    "aiohttp-socks>=0.10.1",
    "fastapi>=0.115.8",
    "python-dotenv>=1.1.0",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
